@@ -3,6 +3,7 @@ Revision history for Genealogy::FindaGrave
 0.08
 	Connect to squid port when proxy is set
 	Ensure new() fails properly when the API gives an error
+	new() now fails if a clearly invalid year is given
 
 0.07	Mon Nov 11 07:59:23 EST 2024
 	Renamed from WWW::Scrape::FindaGrave
